レイアウト修正

--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,8 @@ h6 {
   margin-left: 5px;
   vertical-align: middle;
 }
-.episode-title {
+.episode-title,
+#record-episode-title {
   margin-left: 3px;
 }
 body a,
